--- a/accommodation.html
+++ b/accommodation.html
@@ -85,7 +85,8 @@
 								</ul>
 							</li>
 							<!-- <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li> -->
-							<li class="nav-item"><a class="nav-link" href="./Callforpapers.html">Call for papers</a></li>
+							<li class="nav-item"><a class="nav-link" href="./Callforpapers.html">Call for papers</a>
+							</li>
 							<li class="nav-item"><a class="nav-link" href="importantdates.html">Important Dates &
 									Venue</a></li>
 							<li class="nav-item"><a class="nav-link" href="committees.html">Committees </a></li>
@@ -156,7 +157,12 @@
 		</ul>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img class="d-block w-100" src="img/Accomodation/Taramati-Baradari.png" alt="Taramati-Baradari" width="1100" height="auto">
+				<a href="https://www.google.com/maps/place/Taramathi+Baradari/@17.3680578,78.3728344,15z/data=!4m11!1m2!2m1!1sHotels!3m7!1s0x3bcb942b94ed9187:0x1429cc92eaa6bf83!5m2!4m1!1i2!8m2!3d17.3787622!4d78.3793053"
+					target="_blank" data-toggle="tooltip" data-placement="top" title="Know More">
+					<img class="d-block w-100" src="img/Accomodation/Taramati-Baradari.png" alt="Taramati-Baradari"
+						width="1100" height="auto">
+				</a>
+
 				<div class="carousel-caption">
 					<h3>
 						<a href="https://www.google.com/maps/place/Taramathi+Baradari/@17.3680578,78.3728344,15z/data=!4m11!1m2!2m1!1sHotels!3m7!1s0x3bcb942b94ed9187:0x1429cc92eaa6bf83!5m2!4m1!1i2!8m2!3d17.3787622!4d78.3793053"
@@ -168,11 +174,15 @@
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="img/Accomodation/Park-Continental.png" alt="Park-Continental" width="1100" height="500">
+				<a href="https://www.google.com/maps/place/Park+Continental+Hotel+by+Trance/@17.3993826,78.4478015,16z/data=!4m15!1m6!2m5!1shotels+near+Mehdipatnam,+Hyderabad,+Telangana!5m3!5m2!4m1!1i2!3m7!1s0x3bcb9714344d85a9:0x4a449b4f5c0a668a!5m2!4m1!1i2!8m2!3d17.3993633!4d78.4"
+				target="_blank" data-toggle="tooltip" data-placement="top" title="Know More">
+					<img src="img/Accomodation/Park-Continental.png" alt="Park-Continental" width="1100" height="500">
+				</a>
+
 				<div class="carousel-caption">
 					<h3>
 						<a href="https://www.google.com/maps/place/Park+Continental+Hotel+by+Trance/@17.3993826,78.4478015,16z/data=!4m15!1m6!2m5!1shotels+near+Mehdipatnam,+Hyderabad,+Telangana!5m3!5m2!4m1!1i2!3m7!1s0x3bcb9714344d85a9:0x4a449b4f5c0a668a!5m2!4m1!1i2!8m2!3d17.3993633!4d78.4"
-							data-toggle="tooltip" data-placement="top" title="Know More">
+						target="_blank" data-toggle="tooltip" data-placement="top" title="Know More">
 							Park Continental
 						</a>
 					</h3>
@@ -180,11 +190,14 @@
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="img/Accomodation/Minerva-Grand.jpg" alt="Minerva-Grand" width="1100" height="500">
+				<a href="https://www.google.co.in/maps/place/Minerva+Coffee+Shop/@17.4012359,78.4854057,17z/data=!4m8!1m2!2m1!1sminerva+grand+himayatnagar!3m4!1s0x3bcb99dd1a4fb7c9:0xc3292fd8af177986!8m2!3d17.4012359!4d78.4854057"
+				target="_blank" data-toggle="tooltip" data-placement="top" title="Know More">
+					<img src="img/Accomodation/Minerva-Grand.jpg" alt="Minerva-Grand" width="1100" height="500">
+				</a>
 				<div class="carousel-caption">
 					<h3>
 						<a href="https://www.google.co.in/maps/place/Minerva+Coffee+Shop/@17.4012359,78.4854057,17z/data=!4m8!1m2!2m1!1sminerva+grand+himayatnagar!3m4!1s0x3bcb99dd1a4fb7c9:0xc3292fd8af177986!8m2!3d17.4012359!4d78.4854057"
-							data-toggle="tooltip" data-placement="top" title="Know More">
+						target="_blank" data-toggle="tooltip" data-placement="top" title="Know More">
 							Minerva Grand
 						</a>
 					</h3>
@@ -192,11 +205,15 @@
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="img/Accomodation/Fab.jpg" alt="Fab" width="1100" height="500">
+				<a href="https://www.fabhotels.com/hotels-in-hyderabad/fabhotel-prime-madhapur.html"
+				target="_blank" data-toggle="tooltip" data-placement="top" title="Know More">
+					<img src="img/Accomodation/Fab.jpg" alt="Fab" width="1100" height="500">
+				</a>
+
 				<div class="carousel-caption">
 					<h3>
 						<a href="https://www.fabhotels.com/hotels-in-hyderabad/fabhotel-prime-madhapur.html"
-							data-toggle="tooltip" data-placement="top" title="Know More">
+						target="_blank" data-toggle="tooltip" data-placement="top" title="Know More">
 							Fab
 						</a>
 					</h3>
@@ -204,11 +221,15 @@
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="img/Accomodation/The-Lime.png" alt="The Lime" width="1100" height="500">
+				<a href="https://www.google.co.in/maps/place/The+Lime+Boutique+Suites/@17.4504047,78.3602106,17z/data=!3m1!4b1!4m8!3m7!1s0x3bcb93c0b1555555:0xfbe30aabef3f32ae!5m2!4m1!1i2!8m2!3d17.4503996!4d78.3623993"
+				target="_blank" data-toggle="tooltip" data-placement="top" title="Know More">
+					<img src="img/Accomodation/The-Lime.png" alt="The Lime" width="1100" height="500">
+				</a>
+
 				<div class="carousel-caption">
 					<h3>
 						<a href="https://www.google.co.in/maps/place/The+Lime+Boutique+Suites/@17.4504047,78.3602106,17z/data=!3m1!4b1!4m8!3m7!1s0x3bcb93c0b1555555:0xfbe30aabef3f32ae!5m2!4m1!1i2!8m2!3d17.4503996!4d78.3623993"
-							data-toggle="tooltip" data-placement="top" title="Know More">
+						target="_blank" data-toggle="tooltip" data-placement="top" title="Know More">
 							The Lime
 						</a>
 					</h3>
@@ -219,11 +240,11 @@
 		<a class="carousel-control-prev" href="#demo" role="button" data-slide="prev">
 			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 			<span class="sr-only">Previous</span>
-		  </a>
-		  <a class="carousel-control-next" href="#demo" role="button" data-slide="next">
+		</a>
+		<a class="carousel-control-next" href="#demo" role="button" data-slide="next">
 			<span class="carousel-control-next-icon" aria-hidden="true"></span>
 			<span class="sr-only">Next</span>
-		  </a>
+		</a>
 		<!-- <a class="carousel-control-prev" href="#demo" data-slide="prev">
 			<span class="carousel-control-prev-icon"></span>
 		</a>
