--- a/Callforpapers.html
+++ b/Callforpapers.html
@@ -135,7 +135,7 @@
             not have been previously published or under consideration
             for publication. All papers will be sent for peer review and the corresponding
             author will be notified of the outcome of the review process. The proceedings of the conference
-            will expected to be published by Smart Innovation Systems and Technologies Series,
+            will be published by Smart Innovation Systems and Technologies Series,
             Springer (Approved). Extended versions of selected best papers will expected to be appear
             in SCI/Scopus indexed international journals. At least one of the authors of each accepted paper
             must register for the conference. All submissions are to be done electronically through easychair link.</p>
