replaced welcome.jpg with welcomeBanner.jpg

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 			<div class="welcome_inner row">
 				<div class="col-lg-5">
 					<div class="welcome_img">
-						<img class="img-fluid" src="img/welcome-1.png" alt="">
+						<img class="img-fluid" src="img/banner/welcomeBanner.jpg" alt="">
 					</div>
 				</div>
 				<div class="col-lg-6 offset-lg-1">
