aligned all headings in committee.html to left

--- a/committees.html
+++ b/committees.html
@@ -230,7 +230,7 @@
         <h1>Technical Programme Committee</h1>
         <br />
         <table class="table table-striped">
-            <h2 style="text-align: center;">Conveners</h2>
+            <h2>Conveners</h2>
             <tbody>
                 <tr>
                     <th scope="row">1</th>
@@ -282,7 +282,7 @@
 
         <br />
         <table class="table table-striped">
-            <h2 style="text-align: center;">Organizing Committee</h2>
+            <h2>Organizing Committee</h2>
             <tbody>
                 <tr>
                     <th scope="row">1</th>
@@ -323,7 +323,7 @@
         </table>
 
         <table class="table table-striped">
-            <h2 style="text-align: center;">Publication Committee</h2>
+            <h2>Publication Committee</h2>
             <tbody>
                 <tr>
                     <th scope="row">1</th>
@@ -354,7 +354,7 @@
         </table>
 
         <table class="table table-striped">
-            <h2 style="text-align: center;">Publicity Committee</h2>
+            <h2>Publicity Committee</h2>
             <tbody>
                 <tr>
                     <th scope="row">1</th>
@@ -450,7 +450,7 @@
         <h1>Review Board</h1>
         <br />
         <table class="table table-striped">
-            <h2 style="text-align: center;">National Review Board</h2>
+            <h2>National Review Board</h2>
             <tbody>
                 <tr>
                     <th scope="row">1</th>
@@ -462,7 +462,7 @@
         </table>
         <br />
         <table class="table table-striped">
-            <h2 style="text-align: center;"> International Review Board</h2>
+            <h2> International Review Board</h2>
             <tbody>
                 <tr>
                     <th scope="row">1</th>
