--- a/Callforpapers.html
+++ b/Callforpapers.html
@@ -138,8 +138,9 @@
             will be published by Smart Innovation Systems and Technologies Series,
             Springer (Approved). Extended versions of selected best papers will expected to be appear
             in SCI/Scopus indexed international journals. At least one of the authors of each accepted paper
-            must register for the conference. All submissions are to be done electronically through easychair link.</p>
-            
+            must register for the conference. All submissions are to be done electronically through easychair link. Submitted papers should neither be previously published nor under consideration for publication elsewhere. All papers will be refereed through a peer review process.</p>
+
+        <img src="./img/springer-science.png" class="img-fluid" style="width:30%;height:30%;padding:30px; display: block; margin-left: auto; margin-right: auto;" alt="">
         <ul class="list-group list-group-horizontal" style=" display: inline-block;">
             <li class="list-group-item" style="text-align: center;"><b style="color: black;">Conference Focus Areas</b></li>
             <div class="row">
