--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 		<div class="banner_inner">
 			<div class="container">
 				<div class="banner_content">
-					<h2>4<sup><b style="color:white;">th</b></sup> International Conference on Smart Computing & Informatics (SCI-2020)</h2>
+					<h2>4<sup><b style="color:white; text-transform: lowercase;">th</b></sup> International Conference on Smart Computing & Informatics (SCI-2020)</h2>
 					<div class="row" style="text-align: center;">
 						<div class="col">
 							<img src="img/springer.png" style="width:50%; height:auto"/>
