--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@
 	<!--================End Event Map Area =================-->
 
 	<!--================ start footer Area  =================-->
-	<footer class="footer-area pad_top pad_btm_50" height="auto">
+	<footer class="footer-area  pad_btm_50" height="auto">
 		<div class="container">
-			<div class="row" style="text-align: center; margin:auto;">
+			<!--<div class="row" style="text-align: center; margin:auto;">
 				<div class="col-lg-1 col-md-2 col-sm-2"></div>
 				<div class="col-lg-3  col-md-6 col-sm-6">
 					<div class="single-footer-widget tp_widgets">
@@ -308,10 +308,7 @@
 						Tel: +91 40 23146020<br />
 						Tel: +91 40 23146021<br /> <br />
 
-						<!-- <a
-								   href="/cdn-cgi/l/email-protection#f18183989f929881909db1879294df9092df989f"><span
-									   class="__cf_email__"
-									   data-cfemail="4b3b39222528223b2a270b383f2a2d2d653d282e652a28652225">[email&#160;protected]</span></a><br /> -->
+						
 						Email: <a href="mailto:confcse@gmail.com">Conference Team</a>
 					</div>
 				</div>
@@ -343,14 +340,13 @@
 					<div id="snackbar"></div>
 				</div>
 				<div class="col-lg-1"></div>
-			</div>
+			</div>-->
 			<div class="row footer-bottom d-flex justify-content-between align-items-center">
-				<p class="col-lg-8 col-md-8 footer-text m-0">
+				<p  style="padding-left:280px;">
 					Copyright &copy;
-					<script>document.write(new Date().getFullYear());</script>. Vasavi College of Engineering,
-					Ibrahimbagh, Hyderabad, India. All
-					Rights Reserved.</p>
-				<div class="col-lg-4 col-md-4 footer-social">
+					<script>document.write(new Date().getFullYear());</script>. Vasavi College of Engineering (Autonomous),
+					Ibrahimbagh, Hyderabad.</p>
+				<div class="footer-social" style="padding-rightpx;">
 					<a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
 				</div>
 			</div>
