--- a/importantdates.html
+++ b/importantdates.html
@@ -158,72 +158,69 @@
     <!--================Dates Area =================-->
 
     <!--================ start footer Area  =================-->
-    <footer class="footer-area pad_top pad_btm_50" height="auto">
-        <div class="container">
-            <div class="row" style="text-align: center; margin:auto;">
-                <div class="col-lg-1 col-md-2 col-sm-2"></div>
-                <div class="col-lg-3  col-md-6 col-sm-6">
-                    <div class="single-footer-widget tp_widgets">
-                        <h6 class="footer_title">Contact Us</h6>
-                        Vasavi College of Engineering<br />
-                        <em><small> (Autonomous)<br /></small></em>
-                        <p>Affiliated to Osmania University, Hyderabad </p>
-                        <br />Approved by AICTE, New Delhi<br />
-                        9-5-81, Ibrahimbagh<br />
-                        Hyderabad - 500 031<br />
-                        Telangana, India<br /><br />
+    <footer class="footer-area  pad_btm_50" height="auto">
+		<div class="container">
+			<!--<div class="row" style="text-align: center; margin:auto;">
+				<div class="col-lg-1 col-md-2 col-sm-2"></div>
+				<div class="col-lg-3  col-md-6 col-sm-6">
+					<div class="single-footer-widget tp_widgets">
+						<h6 class="footer_title">Contact Us</h6>
+						Vasavi College of Engineering<br />
+						<em><small> (Autonomous)<br /></small></em>
+						<p>Affiliated to Osmania University, Hyderabad </p>
+						<br />Approved by AICTE, New Delhi<br />
+						9-5-81, Ibrahimbagh<br />
+						Hyderabad - 500 031<br />
+						Telangana, India<br /><br />
 
-                        Tel: +91 40 23146020<br />
-                        Tel: +91 40 23146021<br /> <br />
+						Tel: +91 40 23146020<br />
+						Tel: +91 40 23146021<br /> <br />
 
-                        <!-- <a
-                                   href="/cdn-cgi/l/email-protection#f18183989f929881909db1879294df9092df989f"><span
-                                       class="__cf_email__"
-                                       data-cfemail="4b3b39222528223b2a270b383f2a2d2d653d282e652a28652225">[email&#160;protected]</span></a><br /> -->
-                        Email: <a href="mailto:confcse@gmail.com">Conference Team</a>
-                    </div>
-                </div>
+						
+						Email: <a href="mailto:confcse@gmail.com">Conference Team</a>
+					</div>
+				</div>
 
-                <div class="col-lg-2"></div>
+				<div class="col-lg-2"></div>
 
-                <div class="col-lg-5 col-md-6 col-sm-6">
-                    <div class="single-footer-widget news_widgets">
-                        <h6 class="footer_title">Leave a Reply</h6>
-                        <p>Your email address will not be published. </p>
-                        <div id="mc_embed_signup">
-                            <form id="feedback" action="#" class="subscribe_form relative" onsubmit="">
-                                <div class="input-group d-flex flex-row">
-                                    <input type="text" id="comment" name="COMMENT" placeholder="Write a comment"
-                                        cols="45" rows="4" maxlength="65525" required></textarea><br>
-                                    <input id="name" name="NAME" placeholder="Your name" onfocus="this.placeholder = ''"
-                                        onblur="this.placeholder = 'Name'" required><br>
-                                    <input id="email" name="EMAIL" placeholder="Your email address"
-                                        onfocus="this.placeholder = ''"
-                                        onblur="this.placeholder = 'Email Address '; ValidateEmail();" required
-                                        type="email"><br><br>
-                                    <input type="submit" onclick="submitFeedback()" id="commentBtn" class="btn sub-btn"
-                                        style="position: static;" value="Post Comment">
-                                </div>
+				<div class="col-lg-5 col-md-6 col-sm-6">
+					<div class="single-footer-widget news_widgets">
+						<h6 class="footer_title">Leave a Reply</h6>
+						<p>Your email address will not be published. </p>
+						<div id="mc_embed_signup">
+							<form id="feedback" action="#" class="subscribe_form relative" onsubmit="">
+								<div class="input-group d-flex flex-row">
+									<input type="text" id="comment" name="COMMENT" placeholder="Write a comment"
+										cols="45" rows="4" maxlength="65525" required></textarea><br>
+									<input id="name" name="NAME" placeholder="Your name" onfocus="this.placeholder = ''"
+										onblur="this.placeholder = 'Name'" required><br>
+									<input id="email" name="EMAIL" placeholder="Your email address"
+										onfocus="this.placeholder = ''"
+										onblur="this.placeholder = 'Email Address '; ValidateEmail();" required
+										type="email"><br><br>
+									<input type="submit" onclick="submitFeedback()" id="commentBtn" class="btn sub-btn"
+										style="position: static;" value="Post Comment">
+								</div>
 
-                            </form>
-                        </div>
-                    </div>
-                    <div id="snackbar"></div>
-                </div>
-                <div class="col-lg-1"></div>
-            </div>
-            <div class="row footer-bottom d-flex justify-content-between align-items-center">
-                <p class="col-lg-8 col-md-8 footer-text m-0">
-                    Copyright &copy;
-                    <script>document.write(new Date().getFullYear());</script>. Vasavi College of Engineering,
-                    Ibrahimbagh, Hyderabad, India. All
-                    Rights Reserved.</p>
-                <div class="col-lg-4 col-md-4 footer-social">
-                    <a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
-                </div>
-            </div>
-        </div>
-    </footer>
+							</form>
+						</div>
+					</div>
+					<div id="snackbar"></div>
+				</div>
+				<div class="col-lg-1"></div>
+			</div>-->
+			<div class="footer-area">
+				<p style="text-align: center; padding-top:45px;" >
+					Organized by, Vasavi College of Engineering (Autonomous), Hyderabad. Copyright &copy;
+					<script>document.write(new Date().getFullYear());</script>.&nbsp; &nbsp;
+					<a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
+				</p>
+				<!--<div class="footer-social">
+					<a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
+				</div>-->
+			</div>
+		</div>
+	</footer>
     <!--================ End footer Area  =================-->
 
     <!--================Contact Success and Error message Area =================-->
