--- a/index.html
+++ b/index.html
@@ -341,14 +341,15 @@
 				</div>
 				<div class="col-lg-1"></div>
 			</div>-->
-			<div class="row footer-bottom d-flex justify-content-between align-items-center">
-				<p  style="padding-left:280px;">
-					Copyright &copy;
-					<script>document.write(new Date().getFullYear());</script>. Vasavi College of Engineering (Autonomous),
-					Ibrahimbagh, Hyderabad.</p>
-				<div class="footer-social" style="padding-rightpx;">
+			<div class="footer-area">
+				<p style="text-align: center; padding-top:45px;" >
+					Organized by, Vasavi College of Engineering (Autonomous), Hyderabad. Copyright &copy;
+					<script>document.write(new Date().getFullYear());</script>.&nbsp; &nbsp;
 					<a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
-				</div>
+				</p>
+				<!--<div class="footer-social">
+					<a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
+				</div>-->
 			</div>
 		</div>
 	</footer>
