replaced old accommodation with new

--- a/accommodation-old.html
+++ b/accommodation-old.html
@@ -145,112 +145,112 @@
 	</section>
 	<!--================End Home Banner Area =================-->
 
-
 	<!--================Accommodation   Area =================-->
 
-	<div class="album py-5 bg-light">
-		<div class="container">
-			<h1>Nearby Hotels</h1><br>
-			<div class="row">
+	<div id="demo" class="carousel slide" data-ride="carousel">
+		<ul class="carousel-indicators">
+			<li data-target="#demo" data-slide-to="0" class="active"></li>
+			<li data-target="#demo" data-slide-to="1"></li>
+			<li data-target="#demo" data-slide-to="2"></li>
+			<li data-target="#demo" data-slide-to="3"></li>
+			<li data-target="#demo" data-slide-to="4"></li>
+		</ul>
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<a href="https://www.google.com/maps/place/Taramathi+Baradari/@17.3680578,78.3728344,15z/data=!4m11!1m2!2m1!1sHotels!3m7!1s0x3bcb942b94ed9187:0x1429cc92eaa6bf83!5m2!4m1!1i2!8m2!3d17.3787622!4d78.3793053"
+					target="_blank" data-toggle="tooltip" data-placement="top" title="Know More">
+					<img class="d-block w-100" src="img/Accomodation/Taramati-Baradari.png" alt="Taramati-Baradari"
+						width="1100" height="auto">
+				</a>
 
-				<div class="col-md-4">
-					<div class="card mb-4 shadow-sm">
+				<div class="carousel-caption">
+					<h3>
 						<a href="https://www.google.com/maps/place/Taramathi+Baradari/@17.3680578,78.3728344,15z/data=!4m11!1m2!2m1!1sHotels!3m7!1s0x3bcb942b94ed9187:0x1429cc92eaa6bf83!5m2!4m1!1i2!8m2!3d17.3787622!4d78.3793053"
-							target="_blank">
-							<img class="card-img-top" src="img/Accomodation/Taramati-Baradari.png"
-								alt="Taramati-Baradari" width="200" height="200" />
+							target="_blank" data-toggle="tooltip" data-placement="top" title="Know More">
+							Taramati Baradari
 						</a>
-						<div class="card-body">
-							<p class="card-text">
-								<b style="color:black">Name: </b> Taramati-Baradari<br>
-								<b style="color:black">Distance: </b> 1km
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="card mb-4 shadow-sm">
-						<a href="https://www.google.com/maps/place/The+Golkonda+Hotel/@17.4045089,78.451524,17z/data=!3m1!4b1!4m8!3m7!1s0x3bcb97406a8572c3:0xa02e681b1a4add23!5m2!4m1!1i2!8m2!3d17.4045089!4d78.4537127"
-							target="_blank">
-							<img class="card-img-top" src="img/Accomodation/golkonda.jpeg" width="200" height="200"
-								alt="Golkonda" />
-						</a>
-						<div class="card-body">
-							<p class="card-text">
-								<b style="color:black">Name: </b> The Golkonda Hotel<br>
-								<b style="color:black">Distance: </b> 11km
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-4">
-					<div class="card mb-4 shadow-sm">
-						<a href="https://www.google.com/maps/place/Park+Continental+Hotel+by+Trance/@17.3993826,78.4478015,16z/data=!4m15!1m6!2m5!1shotels+near+Mehdipatnam,+Hyderabad,+Telangana!5m3!5m2!4m1!1i2!3m7!1s0x3bcb9714344d85a9:0x4a449b4f5c0a668a!5m2!4m1!1i2!8m2!3d17.3993633!4d78.4"
-							target="_blank">
-							<img class="card-img-top" src="img/Accomodation/Park-Continental.png" width="200"
-								height="200" alt="Park-Continental">
-						</a>
-						<div class="card-body">
-							<p class="card-text">
-								<b style="color:black">Name: </b> Park Continental<br>
-								<b style="color:black">Distance: </b> 11km
-							</p>
-						</div>
-					</div>
+					</h3>
+					<p>Distance: 1 Km</p>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-4">
-					<div class="card mb-4 shadow-sm">
+			<div class="carousel-item">
+				<a href="https://www.google.com/maps/place/Park+Continental+Hotel+by+Trance/@17.3993826,78.4478015,16z/data=!4m15!1m6!2m5!1shotels+near+Mehdipatnam,+Hyderabad,+Telangana!5m3!5m2!4m1!1i2!3m7!1s0x3bcb9714344d85a9:0x4a449b4f5c0a668a!5m2!4m1!1i2!8m2!3d17.3993633!4d78.4"
+				target="_blank" data-toggle="tooltip" data-placement="top" title="Know More">
+					<img src="img/Accomodation/Park-Continental.png" alt="Park-Continental" width="1100" height="500">
+				</a>
+
+				<div class="carousel-caption">
+					<h3>
+						<a href="https://www.google.com/maps/place/Park+Continental+Hotel+by+Trance/@17.3993826,78.4478015,16z/data=!4m15!1m6!2m5!1shotels+near+Mehdipatnam,+Hyderabad,+Telangana!5m3!5m2!4m1!1i2!3m7!1s0x3bcb9714344d85a9:0x4a449b4f5c0a668a!5m2!4m1!1i2!8m2!3d17.3993633!4d78.4"
+						target="_blank" data-toggle="tooltip" data-placement="top" title="Know More">
+							Park Continental
+						</a>
+					</h3>
+					<p>Distance: 12 Km</p>
+				</div>
+			</div>
+			<div class="carousel-item">
+				<a href="https://www.google.co.in/maps/place/Minerva+Coffee+Shop/@17.4012359,78.4854057,17z/data=!4m8!1m2!2m1!1sminerva+grand+himayatnagar!3m4!1s0x3bcb99dd1a4fb7c9:0xc3292fd8af177986!8m2!3d17.4012359!4d78.4854057"
+				target="_blank" data-toggle="tooltip" data-placement="top" title="Know More">
+					<img src="img/Accomodation/Minerva-Grand.jpg" alt="Minerva-Grand" width="1100" height="500">
+				</a>
+				<div class="carousel-caption">
+					<h3>
 						<a href="https://www.google.co.in/maps/place/Minerva+Coffee+Shop/@17.4012359,78.4854057,17z/data=!4m8!1m2!2m1!1sminerva+grand+himayatnagar!3m4!1s0x3bcb99dd1a4fb7c9:0xc3292fd8af177986!8m2!3d17.4012359!4d78.4854057"
-							target="_blank">
-							<img class="card-img-top" src="img/Accomodation/Minerva-Grand.jpg" width="200" height="200"
-								alt="Minerva-Grand" />
+						target="_blank" data-toggle="tooltip" data-placement="top" title="Know More">
+							Minerva Grand
 						</a>
-						<div class="card-body">
-							<p class="card-text">
-								<b style="color:black">Name: </b> Minerva Grand<br>
-								<b style="color:black">Distance: </b> 14km
-							</p>
-						</div>
-					</div>
+					</h3>
+					<p>Distance: 14 Km</p>
 				</div>
-				<div class="col-md-4">
-					<div class="card mb-4 shadow-sm">
-						<a href="https://www.google.co.in/maps/place/The+Lime+Boutique+Suites/@17.4504047,78.3602106,17z/data=!3m1!4b1!4m8!3m7!1s0x3bcb93c0b1555555:0xfbe30aabef3f32ae!5m2!4m1!1i2!8m2!3d17.4503996!4d78.3623993"
-							target="_blank">
-							<img class="card-img-top" src="img/Accomodation/The-Lime.png" width="200" height="200"
-								alt="The-Lime" />
-						</a>
-						<div class="card-body">
-							<p class="card-text">
-								<b style="color:black">Name: </b> The Lime<br>
-								<b style="color:black">Distance: </b> 15km
-							</p>
-						</div>
-					</div>
-				</div>
+			</div>
+			<div class="carousel-item">
+				<a href="https://www.fabhotels.com/hotels-in-hyderabad/fabhotel-prime-madhapur.html"
+				target="_blank" data-toggle="tooltip" data-placement="top" title="Know More">
+					<img src="img/Accomodation/Fab.jpg" alt="Fab" width="1100" height="500">
+				</a>
 
-				<div class="col-md-4">
-					<div class="card mb-4 shadow-sm">
+				<div class="carousel-caption">
+					<h3>
 						<a href="https://www.fabhotels.com/hotels-in-hyderabad/fabhotel-prime-madhapur.html"
-							target="_blank">
-							<img class="card-img-top" src="img/Accomodation/Fab.jpg" alt="Fab Hotels" width="200"
-								height="200" />
+						target="_blank" data-toggle="tooltip" data-placement="top" title="Know More">
+							Fab
 						</a>
-						<div class="card-body">
-							<p class="card-text">
-								<b style="color:black">Name: </b> Fab Hotels - The Prime<br>
-								<b style="color:black">Distance: </b> 18km
-							</p>
-						</div>
-					</div>
+					</h3>
+					<p>Distance: 18 Km</p>
 				</div>
+			</div>
+			<div class="carousel-item">
+				<a href="https://www.google.co.in/maps/place/The+Lime+Boutique+Suites/@17.4504047,78.3602106,17z/data=!3m1!4b1!4m8!3m7!1s0x3bcb93c0b1555555:0xfbe30aabef3f32ae!5m2!4m1!1i2!8m2!3d17.4503996!4d78.3623993"
+				target="_blank" data-toggle="tooltip" data-placement="top" title="Know More">
+					<img src="img/Accomodation/The-Lime.png" alt="The Lime" width="1100" height="500">
+				</a>
 
-
+				<div class="carousel-caption">
+					<h3>
+						<a href="https://www.google.co.in/maps/place/The+Lime+Boutique+Suites/@17.4504047,78.3602106,17z/data=!3m1!4b1!4m8!3m7!1s0x3bcb93c0b1555555:0xfbe30aabef3f32ae!5m2!4m1!1i2!8m2!3d17.4503996!4d78.3623993"
+						target="_blank" data-toggle="tooltip" data-placement="top" title="Know More">
+							The Lime
+						</a>
+					</h3>
+					<p>Distance: 15 Km</p>
+				</div>
 			</div>
 		</div>
+		<a class="carousel-control-prev" href="#demo" role="button" data-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#demo" role="button" data-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
+		<!-- <a class="carousel-control-prev" href="#demo" data-slide="prev">
+			<span class="carousel-control-prev-icon"></span>
+		</a>
+		<a class="carousel-control-next" href="#demo" data-slide="next">
+			<span class="carousel-control-next-icon"></span>
+		</a> -->
 	</div>
 
 	<!--================End Accommodation Area =================-->
@@ -308,7 +308,7 @@
 				<div class="col-lg-1"></div>
 			</div>-->
 			<div class="footer-area">
-				<p style="text-align: center; padding-top:45px;">
+				<p style="text-align: center; padding-top:45px;" >
 					Organized by, Vasavi College of Engineering (Autonomous), Hyderabad. Copyright &copy;
 					<script>document.write(new Date().getFullYear());</script>.&nbsp; &nbsp;
 					<a href="http://www.vce.ac.in/"><i class="fa fa-dribbble"></i></a>
